name:
  json-builder
version:
  0.1
synopsis:
  JSON builder
category:
  JSON
homepage:
  https://github.com/nikita-volkov/json-builder
bug-reports:
  https://github.com/nikita-volkov/json-builder/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/json-builder.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    JSONBuilder.Prelude
    JSONBuilder.Interpreters.ByteStringBuilder.Prim
  exposed-modules:
    JSONBuilder.Builder
    JSONBuilder.Model
    JSONBuilder.Interpreters.ByteStringBuilder
    JSONBuilder.Interpreters.ByteString
    JSONBuilder.Interpreters.LazyByteString
  build-depends:
    scientific == 0.3.*,
    text == 1.*,
    bytestring == 0.10.*,
    semigroups >= 0.16 && < 0.20,
    base-prelude < 2,
    base >= 4.6 && < 5

